# my_crawler

./: .dockerignore  .env.example  .gitignore  API.md  CHANGES.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  PORT_CONFIGURATION.md  QUICKSTART.md  README.md  bulk_crawl.py  bulk_crawl_100k_config.json  bulk_crawl_config.json  compose.yml  important_websites_100k.txt  pages_to_crawl.txt  pages_to_crawl.txt.progress  show-ports.sh  test_crawl.sh
.github/workflows/: deploy.yml
api/: Cargo.toml
api/src/: main.rs  ranking.rs
api/tests/: six_language_search.rs
browser-extension/: .gitignore  crawler.js  manifest.json
browser-extension/popup/: crawl_options.css  crawl_options.html  popup.js
database/: .gitignore  Dockerfile.static-retrieval-mrl  docker-compose.yml  sync-env.sh
quick_actions/game/: game.html
shared_crawler_api/: Cargo.toml
shared_crawler_api/src/: lib.rs  util_fns.rs
spider/: Cargo.toml  crawler_req_urls.csv
spider/src/: crawl_loop.rs  dedup.rs  extractor.rs  extractor_content.rs  index.rs  main.rs  qdrant.rs  robots.rs  sitemap.rs  state.rs  stats.rs  weaviate.rs  web_visitor.rs  web_visitor_browser.rs
spider/src/third_party_search/: brave.rs  mod.rs
types/: Cargo.toml
