[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-cors = "0.7.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
weaviate-community = "0.2.2"
shared_crawler_api = { path = "../shared_crawler_api" }
