[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-cors = "0.7.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
qdrant-client = "1.18"
shared_crawler_api = { path = "../shared_crawler_api" }
strsim = "0.11.0"
url = "2.5"
anyhow = "1"
