[package]
name = "spider"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["brotli", "deflate", "gzip", "json", "stream"] }
url = "2.5"
scraper = "0.24.0"
robotstxt = "0.3"
sitemap = "0.4"
flate2 = "1"
httpdate = "1"
mime = "0.3"
governor = "0.10.2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
qdrant-client = "1.18"
shared_crawler_api = { path = "../shared_crawler_api" }
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v5"] }
actix-web = "4.12.0"
actix-cors = "0.7.1"
chromiumoxide = "0.8.0"
